--- a/Pagina/Css/estilos_back.css
+++ b/Pagina/Css/estilos_back.css
@@ -138,13 +138,13 @@ nav a{
 .container_formulario {
     width:100%;
     max-width: 1100px;
-    margin: auto;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-gap: 50px;
-    margin-top: 90px;
+    margin-top: 20px;
+    text-align: center;
+    
     
 }
+
+
 
 .container_formulario h2 {
     margin-bottom: 15px;
@@ -160,6 +160,8 @@ nav a{
     
     
 }
+
+
 
 .container_formulario p {
     display: inline-block;
@@ -180,6 +182,7 @@ nav a{
     margin-bottom: 20px;
     border-radius: 3px;
     outline: 0px;    
+
 }
 
 .video1 iframe{
@@ -195,6 +198,11 @@ nav a{
     margin: 0px auto;
     margin-top: 10px;
     
+    
+}
+
+.container_contacto {
+    text-align: center;
     
 }
 
