--- a/Pagina/scss/_formulario.scss
+++ b/Pagina/scss/_formulario.scss
@@ -40,6 +40,12 @@
     
     
     }
+
+    .container_formulario_info { 
+        text-align: $justificacion-texto;
+        display: flexbox;
+    }
+
      
     .container_contacto {
         text-align: $justificacion-texto;
