--- a/Pagina/scss/_imagenes_box.scss
+++ b/Pagina/scss/_imagenes_box.scss
@@ -7,17 +7,16 @@
 
 .box2 {
     height: 80px;
-    margin: 10px 0px;
    text-align: $justificacion-texto;
-   padding: 0 20%;
+   padding: 2% 20%;
 
     p{
-    margin: 20px 0px;
+    margin-bottom: 50px;
 
     }
 
     h2{
-    margin: 50px 0px 
+    margin-bottom: 50px; 
 
     }
 }
@@ -30,12 +29,27 @@
     justify-content: center;
     align-items: center;
     margin: 0 auto;
+    
+
+    
 
     img { 
         width: 200px;
-        height:200px
+        height:200px;
+        transition: all 300ms;
+        
+        
+    
+
     }
-}
+
+    img:hover{ 
+        transform: scale(1.15)
+        }
+
+
+    
+    }
 
 
 
@@ -52,21 +66,23 @@
         display: inline-table;
         margin-top: 10px;
         
-        img{
-            width:235px;
-            height: 220px;
-            margin: 5px 0;
+        img{ 
+      
+           
+        width:235px;
+        height: 220px;
+        margin: 5px 0;
+        transition: all 300ms;
             
+        }
+
+        img:hover{ 
+            transform: scale(1.15)
         }
     }
 
     .box4{ 
-        width: 300px;
-        height: 300px;
-        background-color:$color-secundario ;
-        text-align: $justificacion-texto;
-        display: inline-table;
-        margin-top: 10px;
+        @extend .box3;
         
         img{
             width:270px;
