--- a/Pagina/scss/_main.scss
+++ b/Pagina/scss/_main.scss
@@ -1,3 +1,37 @@
 main {  
-    height: 60vh;
+    height: 70vh;
+    background-color: $color-principal;
+        
+        h2 {
+        
+        text-align:$justificacion-texto;
+        color: $color-texto;
+        }
+
+        h3 {
+            
+            text-align:$justificacion-texto;
+            color: $color-texto;
+            }
+
+        p {
+                
+                text-align:$justificacion-texto;
+                color: $color-texto;
+            }   
+}
+
+@media screen and (max-width: 504px ) {
+
+    main {  
+        height: 120vh;
+        background-color: $color-principal;
+        display: flex;
+        flex-wrap: wrap;
+            
+          
+    }
+
+    
+    
 }
