--- a/Pagina/scss/estilos.css
+++ b/Pagina/scss/estilos.css
@@ -1,4 +1,5 @@
 /* Variables */
+/* SOLO LO UTILIZE COMO EJEMPLO, POR Q LO PEDIA PARA EL TRABJO, YA SE QUE ES LO MISMO QUE LAS VARIABLES DE ARRIBA PERO NO SABIA QUE USO DARLE */
 @font-face {
   font-family: "Tilt Warp";
   src: url(../Assets/fonts/TiltWarp-Regular-VariableFont_XROT\,YROT.ttf);
@@ -24,37 +25,96 @@
 }
 
 h1 {
-  color: black;
+  color: rgb(230, 230, 230);
 }
 
 h2 {
-  color: black;
+  color: rgb(230, 230, 230);
 }
 
 h3 {
-  color: black;
+  color: rgb(230, 230, 230);
 }
 
 p {
-  color: black;
+  color: rgb(230, 230, 230);
 }
 
 body {
-  background-color: rgba(223, 223, 223, 0.849);
+  background-color: rgb(71, 71, 71);
   font-family: "Tilt Warp";
 }
 
-nav {
-  margin: 20px;
-  text-align: center;
+header {
+  height: 16vh;
+  background-color: rgb(71, 71, 71);
 }
-nav a {
-  margin: 20px;
+header h1 {
+  background-color: rgb(17, 17, 17);
+  color: rgb(230, 230, 230);
+  margin-bottom: 0px;
+}
+header nav {
   text-align: center;
+  background-color: rgb(41, 41, 41);
+}
+header nav li {
+  display: inline-block;
+}
+header nav li a {
+  margin: 30px;
+  font-size: 30px;
+  text-align: center;
+  color: rgb(230, 230, 230);
+  text-decoration: none;
+}
+header nav li a:hover {
+  color: black;
 }
 
+@media screen and (max-width: 504px) {
+  header {
+    height: 52vh;
+    background-color: rgb(71, 71, 71);
+  }
+  header nav li a {
+    margin: 0px 100px;
+    font-size: 30px;
+    text-align: center;
+    color: rgb(230, 230, 230);
+    text-decoration: none;
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
 main {
-  height: 60vh;
+  height: 70vh;
+  background-color: rgb(71, 71, 71);
+}
+main h2 {
+  text-align: center;
+  color: rgb(230, 230, 230);
+}
+main h3 {
+  text-align: center;
+  color: rgb(230, 230, 230);
+}
+main p {
+  text-align: center;
+  color: rgb(230, 230, 230);
+}
+
+@media screen and (max-width: 504px) {
+  main {
+    height: 120vh;
+    background-color: rgb(71, 71, 71);
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+footer {
+  background-color: rgb(71, 71, 71);
+  height: 14vh;
 }
 
 .box1 {
@@ -66,15 +126,14 @@ main {
 
 .box2 {
   height: 80px;
-  margin: 10px 0px;
   text-align: center;
-  padding: 0 20%;
+  padding: 2% 20%;
 }
 .box2 p {
-  margin: 20px 0px;
+  margin-bottom: 50px;
 }
 .box2 h2 {
-  margin: 50px 0px;
+  margin-bottom: 50px;
 }
 
 .img1 {
@@ -88,6 +147,10 @@ main {
 .img1 img {
   width: 200px;
   height: 200px;
+  transition: all 300ms;
+}
+.img1 img:hover {
+  transform: scale(1.15);
 }
 
 .box_container {
@@ -95,26 +158,22 @@ main {
   height: 350px;
   text-align: center;
 }
-.box_container .box3 {
+.box_container .box3, .box_container .box4 {
   width: 300px;
   height: 300px;
-  background-color: rgb(250, 161, 161);
+  background-color: rgb(41, 41, 41);
   text-align: center;
   display: inline-table;
   margin-top: 10px;
 }
-.box_container .box3 img {
+.box_container .box3 img, .box_container .box4 img {
   width: 235px;
   height: 220px;
   margin: 5px 0;
+  transition: all 300ms;
 }
-.box_container .box4 {
-  width: 300px;
-  height: 300px;
-  background-color: rgb(250, 161, 161);
-  text-align: center;
-  display: inline-table;
-  margin-top: 10px;
+.box_container .box3 img:hover, .box_container .box4 img:hover {
+  transform: scale(1.15);
 }
 .box_container .box4 img {
   width: 270px;
@@ -124,7 +183,7 @@ main {
 .box_container .video1 {
   width: 450px;
   height: 350px;
-  background-color: rgb(250, 161, 161);
+  background-color: rgb(41, 41, 41);
   margin: 0px auto;
   margin-top: 10px;
 }
@@ -153,7 +212,7 @@ main {
   text-decoration: none;
   width: 100%;
   margin-bottom: 15px;
-  color: black;
+  color: rgb(230, 230, 230);
 }
 
 .container_formulario_info form .campo, textarea {
@@ -166,6 +225,11 @@ main {
   border-radius: 3px;
   outline: 0px;
   margin-top: 10px;
+}
+
+.container_formulario_info {
+  text-align: center;
+  display: flexbox;
 }
 
 .container_contacto {
